# constella

./: .gitignore  README.md  pyproject.toml
agentic_development_docs/: coding_rules.md  general_rules.md  important_rules.md  instruction_following_prompt.md  prompt.md  rules1.md
agentic_development_docs/agent_communication_docs/: design_decision.md  implementation_summary.md
agentic_development_docs/project_design_plan/: 0_constella_design_plan.md  initial_plan.md  v1_implementation_prompt.md
agentic_development_docs/project_design_plan/finding_n_clusters_silhoutte/: davies_bouldin_score.md  elbow_method.md  silhoutte_method.md  silhoutte_samples.md  silhoutte_score1.md  silhoutte_score2.md
agentic_development_docs/used_prompts/: instructions.md  v0_1_scope_review.md
constella/: __init__.py
constella/clustering/: kmeans.py
constella/config/: schemas.py
constella/data/: models.py  results.py
constella/embeddings/: adapters.py  base.py
constella/labeling/: llm.py  selection.py
constella/pipelines/: workflow.py
constella/visualization/: artifacts.py  html_templates.py  streamlit.py  umap.py  umap_hover.html
scripts/: litellm_embedding_fireworks_sample_call.py  quora_analysis_pipeline.py
tests/: conftest.py  test_clustering.py  test_visualization.py  test_workflow.py
