 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "constella"
 version = "0.1.0"
 description = "Auto-grouping and auto-labeling for text corpora"
 authors = [
     {name = "Constella Contributors"}
 ]
 readme = "README.md"
 requires-python = ">=3.10"
 license = {text = "MIT"}
 dependencies = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "umap-learn>=0.5.5",
    "numba>=0.56,<0.62",
    "streamlit>=1.37",
 ]

[project.optional-dependencies]
llm = [
    "litellm>=1.39.1",
]
test = [
     "pytest>=7.4",
     "pytest-mock>=3.10",
 ]

 [tool.setuptools.packages.find]
 where = ["."]
 include = ["constella*"]
